--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,6 +5,8 @@
         User Name: <input type="text" name="username" [(ngModel)]="username">
         Password: <input type="password" name="password" [(ngModel)]="password">
         <!-- User Name: {{username}} -->
-        <button (click)=handleLogin() class="btn btn-success">Login</button>
+        <!-- <button (click)=handleLogin() class="btn btn-success">Login</button> -->
+        <!-- <button (click)=handleBasicAuthLogin() class="btn btn-success">Login</button> -->
+        <button (click)=handleJwtAuthLogin() class="btn btn-success">Login</button>        
     </div>
 </div>
